# startup_labs

LED/: .clangd  README.md
LED-twinkle/Core/Src/: main.c
LED-twinkle/MDK-ARM/: STM32H743.uvguix.FANKE-LQM  STM32H743.uvguix.lenovo  STM32H743.uvoptx  STM32H743.uvprojx  startup_stm32h743xx.lst
LED-twinkle/MDK-ARM/.eide/: eide.json  env.ini  files.options.yml
LED-twinkle/MDK-ARM/STM32H743/: STM32H743.axf  STM32H743.build_log.htm  STM32H743.hex  STM32H743.htm  led.d  (+26 more)
LED/Cmake/: toolchain.cmake
LED/Docs/: Problems_wait_solve.md
LED/Scripts/: stm32h743xi_flash.ld
LED_DUAL_CPU/: CMakeLists.txt
LED_DUAL_CPU/Application/: main.c
LED_DUAL_CPU/Docs/: Problems_wait_solve.md  toolchain.md
LED_FreeRTOS/: CMakeLists.txt  build.sh  startup_stm32h743xx.S
LED_FreeRTOS/Application/: FreeRTOSConfig.h  app_task.c  app_task.h  main.c  main.h  stm32h7xx_it.c
LED_FreeRTOS/Cmake/: toolchain.cmake
LED_FreeRTOS/Docs/: Bootloader.md  StartupWithoutMMU.md  loadDomain_and_exeDomain.md
LED_FreeRTOS/Scripts/: stm32h743xi_flash.ld  sys_stm32h7x.cfg
LED_OS_FS/: CMakeLists.txt
LED_OS_FS/Application/: DMA.h  main.c  main.h  stm32h7xx_it.c
LED_OS_FS/Cmake/: toolchain.cmake
LED_OS_FS/Docs/: FATFS.md
LED_OS_FS/Scripts/: stm32h743xi_flash.ld
LED_RAM_EXEC/: CMakeLists.txt  README.md  bootloader.S  startup_self_define.S
LED_RAM_EXEC/Application/: main.c  main.h  stm32h7xx_it.c
LED_RAM_EXEC/Cmake/: toolchain.cmake
LED_RAM_EXEC/Docs/: loadDomain_and_exeDomain.md  toolchain.md
LED_RAM_EXEC/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_tim.c
LED_RAM_EXEC/Drivers/User/Inc/: tim3.h
LED_RAM_EXEC/Drivers/User/Src/: led.c  tim3.c
LED_RAM_EXEC/Scripts/: stm32h743xi_flash.ld
(+45 files in other folders)
